<resources>
    <string name="app_name">XSense</string>
    <string name="donate">Donate</string>
    <string name="sense_rom_warning">Sense ROM required</string>
    <string name="sense_rom_warning_msg">Your ROM doesn\'t seem to be a Sense ROM\nThis application doesn\'t support CM or AOSP ROMs.</string>
    <string name="disable_loud_volume_disabled">Disable Loud volume warning (listening at loud volumes may damage your ears, use caution)</string>
    <string name="disable_loud_volume">Disable loud volume warning</string>
    <string name="notification_panel">Notifications panel</string>
    <string name="system">System</string>
    <string name="reboot">Reboot</string>
    <string name="cancel">Cancel</string>
    <string name="reboot_options">Reboot options</string>
    <string name="reboot_recovery">Recovery</string>
    <string name="reboot_hotboot">Hotboot</string>
    <string name="reboot_download">Download</string>
    <string name="hide">Hide</string>
    <string name="sound">Sound</string>
    <string name="clock">Clock</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="apply">Apply</string>
    <string name="long_press_skip_summary">Skip to the next/previous track with a long press on the volume keys (only when the screen is off, also works with headset controls)</string>
    <string name="long_press_skip">Skip tracks with volume keys</string>
    <string name="unplug_screen_on_summary">Turn the screen on when you unplug your device from AC/USB</string>
    <string name="unplug_screen_on">Turn on screen when unplugged</string>
    <string name="reboot_required">Please reboot to apply changes.</string>
    <string name="reboot_required_title">Reboot requested</string>
    <string name="reboot_required_message">XSense requires a reboot to apply changes</string>
    <string name="disable_scrolling_cache">Disable scrolling cache</string>
    <string name="disable_scrolling_cache_on">Scrolling cache disabled</string>
    <string name="disable_scrolling_cache_off">Scrolling cache enabled</string>
    <string name="enable4wayreboot">Enable 4 way reboot menu</string>
    <string name="enable4wayreboot_on">4 way reboot menu enabled</string>
    <string name="enable4wayreboot_off">4 way reboot menu disabled</string>
    <string name="power">Power</string>
    <string name="hide_ime_switcher_summary">While the keyboard is visible, show the Select input method notification</string>
    <string name="hide_ime_switcher">Hide input method switcher</string>
    <string name="notifications">Notifications</string>
    <string name="camera_and_gallery">Camera and Gallery</string>
    <string name="note_please_consider_making_a_donation">Consider making a small donation to support this project and keep developments alive.</string>
    <string name="ads_support">Ads support</string>
    <string name="remove_ads_banner">Remove this app ads</string>
    <string name="advanced">Advanced</string>
    <string name="clock_position">Clock position</string>
    <string name="clock_position_summary">Choose clock position:\n%s</string>
    <string name="camera_low_battery_warning_enabled">Camera low battery warning enabled</string>
    <string name="camera_low_battery_warning_disabled">Camera low battery warning disabled</string>
    <string name="disable_camera_low_battery_warning">Disable low battery warning</string>
    <string name="set_camera_critical_battery_level_warning">Set Camera critical battery level warning</string>
    <string name="critical_battery_level">Critical battery level</string>
    <string name="force_english_language">Force English Language</string>
    <string name="apply_default_english_language_instead_of_your_local_translation_to_this_application">Apply default English language instead of your local translation to this Application</string>
    <string name="language">Language</string>
    <string name="screenshot">Screenshot</string>
    <string name="reboot_confirmation">Reboot confirmation</string>
    <string name="reboot_requires_confirmation">Reboot requires confirmation</string>
    <string name="add_screenshot_to_power_menu">Add Screenshot to power menu</string>
    <string name="screen_record">Screen Record</string>
    <string name="add_screen_record_to_power_menu">Add Screen Record to power menu, Busybox required!</string>
    <string name="expand_all_notifications">Expand all notifications</string>
    <string name="auto_expand_all_notifications_while_shown_on_the_notification_drawer">Auto Expand all notifications while shown on the notification drawer</string>
    <string name="phone">Phone</string>
    <string name="phone_sms">Phone and Messages</string>
    <string name="disable_noise_suppression">Disable noise suppression</string>
    <string name="disable_auto_noise_suppression">Disable auto noise suppression</string>
    <string name="call_recording">Call recording</string>
    <string name="enable_incall_voice_recording">Enable InCall voice recording\nHeadset required! you may get a distorted sound if you record through the main speaker, this IS an HTC bug.</string>
    <string name="master_volume">Master Volume</string>
    <string name="use_master_volume">Use Master volume</string>
    <string name="dual_pane">Dual pane</string>
    <string name="enable_dual_pane_on_preferences">Enable dual pane on preferences</string>
    <string name="disable_weather_widget">Disable weather widget</string>
    <string name="remove_default_weather_widget_from_lockscreen">Remove default weather widget from lockscreen</string>
    <string name="enable_4x5_grid">Enable 5 rows</string>
    <string name="set_the_launcher_row_number_to_5_lines">Set launcher grid to 4x5.\nShortcut auto-install will be disabled!</string>
    <string name="hide_htc_sync">Hide Htc Sync</string>
    <string name="disable_htc_sync_notifications">Disable Htc Sync notifications</string>
    <string name="hide_carrier_label">Hide carrier label</string>
    <string name="hide_carrier_label_sum">Hide Operator name</string>
    <string name="use_custom_carrier_label">Custom carrier label</string>
    <string name="default_carrier_label">Leave empty for default operator name</string>
    <string name="hide_emergency_call">Hide Emergency Call</string>
    <string name="hide_emergency_call_button">Hide Emergency Call Button</string>
    <string name="hide_usb_notifications">Hide Usb notifications</string>
    <string name="disable_usb_adb_notifications">Disable Usb/Adb notifications</string>
    <string name="hide_mtp_notifications">Hide MTP notifications</string>
    <string name="disable_media_transfer_protocol_mtp_notifications">Disable Media transfer protocol (MTP) notifications</string>
    <string name="google_playstore_support">Google PlayStore support</string>
    <string name="display_playstore_button_on_the_launcher_menu">Display PlayStore button on the Launcher menu</string>
    <string name="hide_battery">Hide battery</string>
    <string name="battery">Battery</string>
    <string name="hide_battery_icon">Hide Battery icon</string>
    <string name="circle_battery">Circle Battery</string>
    <string name="set_battery_icon_to_a_circle_indicator">Set battery icon to a circle indicator</string>
    <string name="enable_long_back_kills_process">Long BACK kills process</string>
    <string name="enable_long_back_kills_process_summary">Holding BACK kills foreground process/activity</string>
    <string name="enable_long_back_kills_app">Long BACK kills App</string>
    <string name="enable_long_back_kills_app_summary">Kill all front App activities.\nMust grant Root access to System OS! (Trust System user on SuperSU)</string>
    <string name="power_menu">Power Menu</string>
    <string name="disable_swipe_gestures">Disable Swipe gestures</string>
    <string name="disable_swipe_gestures_and_keep_double_tap_to_wakeup">Disable Swipe gestures and keep double tap to wakeup device</string>
    <string name="settings_style">Settings style</string>
    <string name="disable_keyboard_full_screen">Disable keyboard full screen</string>
    <string name="disable_keyboard_full_screen_on_landscape_mode_n_it_supports">Disable full screen mode on landscape.\nIt supports HTC, Aosp, Google and Swift keyboards.</string>
    <string name="keyboard">Keyboard</string>
    <string name="launcher">Launcher</string>
    <string name="applications">Applications</string>
    <string name="screen_off_effect">Screen Off effect</string>
    <string name="set_screen_off_effect_crt_tv_">Set Screen Off effect (CRT TV)</string>
    <string name="quick_pin_unlock">Enable quick PIN unlock</string>
    <string name="quick_pin_unlock_summary">"Use with caution! Risk of temporary device lockout"</string>
    <string name="wakeup_on_new_sms">Wakeup on new SMS</string>
    <string name="turn_screen_on_when_you_receive_a_new_message">Turn screen ON when you receive a new message</string>
    <string name="disable_sms_conversion">Disable SMS conversion</string>
    <string name="bypass_text_message_size_limitation_network_limitation_still_apply_">Bypass text message size limitation, Network limitation still apply!</string>
    <string name="convert_accents">Convert accents</string>
    <string name="enable_accents_conversion">Enable Accents conversion</string>
    <string name="big_caller_picture">Big caller picture</string>
    <string name="enable_big_caller_picture">Increase caller picture hight</string>
    <string name="messages">Messages</string>
    <string name="data_toggle">Toggle mobile data</string>
    <string name="data_toggle_summ">Add the option which toggles mobile data connection.</string>
    <string name="disable_volume_change_sound">Disable volume change sound</string>
    <string name="disable_playing_sound_while_increasing_decreasing_volume">Disable playing sound while increasing/decreasing volume</string>
    <string name="all_rotations_summary">This includes upside down</string>
    <string name="all_rotations">Enable all rotation angles</string>
    <string name="disable_auto_correction">Disable auto correction</string>
    <string name="disable_keyboard_auto_correction_and_keep_auto_completion_suggestions">Disable keyboard auto correction and keep auto completion suggestions</string>
    <string name="enable_heads_up_notifications">Enable heads up notifications</string>
    <string name="enable_heads_up_notifications_intruder_alerts_">Enable heads up notifications (Intruder alerts)</string>
    <string name="heads_up_for_ongoing_notifications">Ongoing notifications</string>
    <string name="enable_heads_up_for_ongoing_notifications">Enable heads up for ongoing/persistent notifications</string>
    <string name="heads_up_notifications">Heads up notifications</string>
    <string name="heads_up_delay">Heads up delay</string>
    <string name="set_the_delay_before_dismissing_the_heads_up_notification">Set the delay before dismissing the heads up notification</string>
    <string name="carrier_name">Carrier name</string>
    <string name="display_the_protected_settings_informations">Display protected informations</string>
    <string name="display_all_settings_informations_about_your_device_software_and_hardware">Display all settings informations about your device software and hardware</string>
    <string name="disable_all_caps">Disable all Caps</string>
    <string name="disable_all_capital_letters_feature_on_settings_menus_texts_and_buttons">disable all capital letters feature on settings, menus, texts and buttons</string>
    <string name="sdcard_rw_permission">SDcard RW permission</string>
    <string name="add_read_and_write_permission_to_the_external_sdcard">Add read and write permission to the external sdCard</string>
    <string name="more_locales">More locales</string>
    <string name="enable_more_locales_on_the_input_language_settings">Enable more Locales/language\nYou do NOT need it if you are using WanamLite Rom</string>
</resources>