<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="prefsRoot" >

    <PreferenceScreen
        android:icon="@drawable/notification"
        android:key="statusbarKey"
        android:title="@string/notification_panel" >
        <PreferenceCategory android:title="@string/notifications" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="expandNotifications"
                android:summary="@string/auto_expand_all_notifications_while_shown_on_the_notification_drawer"
                android:title="@string/expand_all_notifications" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableSyncNotification"
                android:summary="@string/disable_htc_sync_notifications"
                android:title="@string/hide_htc_sync" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableUSBNotification"
                android:summary="@string/disable_usb_adb_notifications"
                android:title="@string/hide_usb_notifications" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableMTPNotification"
                android:summary="@string/disable_media_transfer_protocol_mtp_notifications"
                android:title="@string/hide_mtp_notifications" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/heads_up_notifications" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="headsUPNotifications"
                android:summary="@string/enable_heads_up_notifications_intruder_alerts_"
                android:title="@string/enable_heads_up_notifications" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="headsUPNotifications"
                android:key="headsUPOngoingNotifications"
                android:summary="@string/enable_heads_up_for_ongoing_notifications"
                android:title="@string/heads_up_for_ongoing_notifications" />

            <de.robv.android.xposed.library.ui.ValueSeekBarPreference
                displayFormat="%dms"
                max="10000"
                min="100"
                step="100"
                android:defaultValue="3700"
                android:dependency="headsUPNotifications"
                android:key="headsUpNotificationDecay"
                android:summary="@string/set_the_delay_before_dismissing_the_heads_up_notification"
                android:title="@string/heads_up_delay" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="batteryCat"
            android:title="@string/battery" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="hideBatteryIcon"
                android:summary="@string/hide_battery_icon"
                android:title="@string/hide_battery" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="hideBatteryIcon"
                android:key="selectedBatteryIcon"
                android:summary="@string/set_battery_icon_to_a_circle_indicator"
                android:title="@string/circle_battery" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="opName"
            android:title="@string/carrier_name" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="hideCarrierNotification"
                android:summary="@string/hide_carrier_label_sum"
                android:title="@string/hide_carrier_label" />

            <EditTextPreference
                android:defaultValue=""
                android:dependency="hideCarrierNotification"
                android:key="customCarrierNotification"
                android:summary="@string/default_carrier_label"
                android:title="@string/use_custom_carrier_label" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/clock" >
            <de.robv.android.xposed.library.ui.ListPreferenceFixedSummary
                android:defaultValue="Right"
                android:entries="@array/clock_position_entries"
                android:entryValues="@array/clock_position_values"
                android:key="clockPosition"
                android:summary="@string/clock_position_summary"
                android:title="@string/clock_position" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/notifications" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="hideImeSwitcher"
                android:summary="@string/hide_ime_switcher_summary"
                android:title="@string/hide_ime_switcher" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/lockscreen"
        android:key="lockscreenKey"
        android:title="@string/lockscreen" >
        <PreferenceCategory
            android:key="powerCat"
            android:title="@string/power" >
            <de.robv.android.xposed.library.ui.ListPreferenceFixedSummary
                android:defaultValue="0"
                android:entries="@array/screen_off_effect_entries"
                android:entryValues="@array/screen_off_effect_values"
                android:key="screenOffEffect"
                android:summary="@string/set_screen_off_effect_crt_tv_"
                android:title="@string/screen_off_effect" />

            <CheckBoxPreference
                android:key="quickPinUnlockEnabled"
                android:summary="@string/quick_pin_unlock_summary"
                android:title="@string/quick_pin_unlock" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableGestures"
                android:summary="@string/disable_swipe_gestures_and_keep_double_tap_to_wakeup"
                android:title="@string/disable_swipe_gestures" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="disableWeatherWidget"
                android:summary="@string/remove_default_weather_widget_from_lockscreen"
                android:title="@string/disable_weather_widget" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="hideCarrierLockscreen"
                android:summary="@string/hide_carrier_label_sum"
                android:title="@string/hide_carrier_label" />

            <EditTextPreference
                android:defaultValue=""
                android:dependency="hideCarrierLockscreen"
                android:key="customCarrierLockscreen"
                android:summary="@string/default_carrier_label"
                android:title="@string/use_custom_carrier_label" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="hideEmergencyCallButton"
                android:summary="@string/hide_emergency_call_button"
                android:title="@string/hide_emergency_call" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="unplugScreenOn"
                android:summary="@string/unplug_screen_on_summary"
                android:title="@string/unplug_screen_on" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/phone"
        android:key="phoneKey"
        android:title="@string/phone_sms" >
        <PreferenceCategory android:title="@string/phone" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enableCallRecording"
                android:summary="@string/enable_incall_voice_recording"
                android:title="@string/call_recording" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableNoiseSuppression"
                android:summary="@string/disable_auto_noise_suppression"
                android:title="@string/disable_noise_suppression" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enableBigCallerId"
                android:summary="@string/enable_big_caller_picture"
                android:title="@string/big_caller_picture" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/messages" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="screenONSMS"
                android:summary="@string/turn_screen_on_when_you_receive_a_new_message"
                android:title="@string/wakeup_on_new_sms" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="getMaxSMSConcatenatedNumber"
                android:summary="@string/bypass_text_message_size_limitation_network_limitation_still_apply_"
                android:title="@string/disable_sms_conversion" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="isEnableAccentConvert"
                android:summary="@string/enable_accents_conversion"
                android:title="@string/convert_accents" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/sound"
        android:key="soundKey"
        android:title="@string/sound" >
        <PreferenceCategory android:title="@string/sound" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="disableLoudVolumeWarning"
                android:summary="@string/disable_loud_volume_disabled"
                android:title="@string/disable_loud_volume" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="longPressTrackSkip"
                android:summary="@string/long_press_skip_summary"
                android:title="@string/long_press_skip" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="useMasterVolume"
                android:summary="@string/use_master_volume"
                android:title="@string/master_volume" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableVolumeChangeSound"
                android:summary="@string/disable_playing_sound_while_increasing_decreasing_volume"
                android:title="@string/disable_volume_change_sound" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/system"
        android:key="systemKey"
        android:title="@string/system" >
        <PreferenceCategory android:title="@string/keyboard" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableKBFullScreen"
                android:summary="@string/disable_keyboard_full_screen_on_landscape_mode_n_it_supports"
                android:title="@string/disable_keyboard_full_screen" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableKBAutoCorrection"
                android:summary="@string/disable_keyboard_auto_correction_and_keep_auto_completion_suggestions"
                android:title="@string/disable_auto_correction" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/settings_style" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enableDualPane"
                android:summary="@string/enable_dual_pane_on_preferences"
                android:title="@string/dual_pane" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableAllCaps"
                android:summary="@string/disable_all_capital_letters_feature_on_settings_menus_texts_and_buttons"
                android:title="@string/disable_all_caps" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/launcher" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enable4x5grid"
                android:summary="@string/set_the_launcher_row_number_to_5_lines"
                android:title="@string/enable_4x5_grid" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="isGoogleApplicationsSupport"
                android:summary="@string/display_playstore_button_on_the_launcher_menu"
                android:title="@string/google_playstore_support" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/applications" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="longBackToKillProcess"
                android:summary="@string/enable_long_back_kills_process_summary"
                android:title="@string/enable_long_back_kills_process" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="longBackToKillProcess"
                android:key="longBackToKillApp"
                android:summary="@string/enable_long_back_kills_app_summary"
                android:title="@string/enable_long_back_kills_app" />
        </PreferenceCategory>
        <PreferenceCategory
            android:key="powerMenuKey"
            android:title="@string/power_menu" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enable4WayReboot"
                android:summaryOff="@string/enable4wayreboot_off"
                android:summaryOn="@string/enable4wayreboot_on"
                android:title="@string/enable4wayreboot" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="enable4WayReboot"
                android:key="mRebootConfirmRequired"
                android:summary="@string/reboot_requires_confirmation"
                android:title="@string/reboot_confirmation" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="mScreenshot"
                android:summary="@string/add_screenshot_to_power_menu"
                android:title="@string/screenshot" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="mScreenrecord"
                android:summary="@string/add_screen_record_to_power_menu"
                android:title="@string/screen_record" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="dataToggle"
                android:summary="@string/data_toggle_summ"
                android:title="@string/data_toggle" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/system" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="disableScrollingCache"
                android:summaryOff="@string/disable_scrolling_cache_off"
                android:summaryOn="@string/disable_scrolling_cache_on"
                android:title="@string/disable_scrolling_cache" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enableAllRotation"
                android:summary="@string/all_rotations_summary"
                android:title="@string/all_rotations" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/camera_and_gallery" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:disableDependentsState="true"
                android:key="disbaleLowBatteryCloseWarningLevel"
                android:summaryOff="@string/camera_low_battery_warning_enabled"
                android:summaryOn="@string/camera_low_battery_warning_disabled"
                android:title="@string/disable_camera_low_battery_warning" />

            <de.robv.android.xposed.library.ui.ValueSeekBarPreference
                displayFormat="%d%%"
                max="100"
                min="1"
                android:defaultValue="5"
                android:dependency="disbaleLowBatteryCloseWarningLevel"
                android:key="configCriticalBatteryWarningLevel"
                android:summary="@string/set_camera_critical_battery_level_warning"
                android:title="@string/critical_battery_level" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:icon="@drawable/advanced"
        android:key="advanced"
        android:title="@string/advanced" >
        <PreferenceCategory android:title="@string/language" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="forceEnglish"
                android:summary="@string/apply_default_english_language_instead_of_your_local_translation_to_this_application"
                android:title="@string/force_english_language" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/system" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="addRWPermission"
                android:summary="@string/add_read_and_write_permission_to_the_external_sdcard"
                android:title="@string/sdcard_rw_permission" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="isDisclosed"
                android:summary="@string/display_all_settings_informations_about_your_device_software_and_hardware"
                android:title="@string/display_the_protected_settings_informations" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="tweakLocales"
                android:summary="@string/enable_more_locales_on_the_input_language_settings"
                android:title="@string/more_locales" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/ads_support" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="removedAds"
                android:summary="@string/note_please_consider_making_a_donation"
                android:title="@string/remove_ads_banner" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>